--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,9 +1,11 @@
 en:
+  hello: "Hello world"
   static_pages:
     home:
       title: "Home"
       para1_html: "This is the home page for the %{href}"
-      para2_html: "sample application"
+      para2: "sample application"
+      welcome: "Welcome to Sample App"
     help:
       title: "Help"
       para1_html: "Get help on the Ruby on Rails Tutorial at the %{link}"
@@ -16,15 +18,25 @@ en:
         for the tutorial."
     contact:
       title: "Contact"
-      para1_html: "Contact the Ruby on Rails Tutorial about the sample
-       app at the %{href}"
+      para1_html: "Contact the Ruby on Rails Tutorial about the sample app at the %{href}"
       contact_page: "contact page"
   book: "book"
   tutorial: "Ruby on Rails Tutorial"
-  base_title: "Ruby on Rails Tutorial Sample App"
+  main_title: "Ruby on Rails Tutorial Sample App"
+  screencast: "screencast series"
+  log_in_message_html: "This is a text, with a %{href} inside."
+  log_in_href: "link"
+  home: "Home"
+  help: "Help"
+  log_in: "Log in"
+  sign_up: "Sign up now"
+  author: "Michael Hart"
+  sample_app: "Sample App"
+  footer_text_html: "The %{main_href} by %{author_href}"
   url:
     main_page: "https://www.railstutorial.org/"
     help_page: "https://www.railstutorial.org/help"
     about_page: "https://www.railstutorial.org/about"
     contact_page: "https://www.railstutorial.org/contact"
     book_page: "https://www.railstutorial.org/book"
+    author: "http://www.michaelhartl.com/"
