--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,66 +1,150 @@
-en:
-  static_pages:
-    home:
-      title: "Home"
-      para1_html: "This is the home page for the %{href}"
-      para2: "sample application"
-      welcome: "Welcome to Sample App"
-      alt: "Rails logos"
-    help:
-      title: "Help"
-      para1_html: "Get help on the Ruby on Rails Tutorial at the %{link}"
-      para2_html: "To get help on this sample app, see the %{href}"
-      help_page: "help page"
-    about:
-      title: "About"
-      about_html: "The %{main_href} is a %{book_href} and %{main_href} to
-        teach web development with %{main_href}. This is the sample application
-        for the tutorial."
-    contact:
-      title: "Contact"
-      para1_html: "Contact the Ruby on Rails Tutorial about the sample app at the %{href}"
-      contact_page: "contact page"
-  users:
-    new:
-      password_confirmation: "Confirmation"
-      submmit: "Create my account"
-  misc:
-    error_message_html: "This form contains %{error_count}"
-    errors:
-      one: "1 error"
-      other: "%{count} errors"
-    user_not_exists: "There's no such user"
-    login_fails: "Invalid email/password combination"
-  book: "book"
-  tutorial: "Ruby on Rails Tutorial"
-  main_title: "Ruby on Rails Tutorial Sample App"
-  screencast: "screencast series"
-  log_in_message_html: "This is a text, with a %{href} inside."
-  log_in_href: "link"
-  home: "Home"
-  help: "Help"
-  users: "Users"
-  profile: "Profile"
-  settings: "Settings"
-  name: "Name"
-  email: "Email"
-  password: "Password"
-  form:
-    create: "Sign me up!"
-  title:
-    signup: "Sign up"
-  log_in: "Log in"
-  log_out: "Log out"
-  sign_up: "Sign up now"
-  author: "Michael Hart"
-  sample_app: "Sample App"
-  submmit: "Create my account"
-  footer_text_html: "The %{main_href} by %{author_href}"
-  url:
-    main_page: "https://www.railstutorial.org/"
-    help_page: "https://www.railstutorial.org/help"
-    about_page: "https://www.railstutorial.org/about"
-    contact_page: "https://www.railstutorial.org/contact"
-    book_page: "https://www.railstutorial.org/book"
-    author: "http://www.michaelhartl.com/"
+# Files in the config/locales directory are used for internationalization
+# and are automatically loaded by Rails. If you want to use locales other
+# than English, add the necessary files in this directory.
+#
+# To use the locales, use `I18n.t`:
+#
+#     I18n.t 'hello'
+#
+# In views, this is aliased to just `t`:
+#
+#     <%= t('hello') %>
+#
+# To use a different locale, set it with `I18n.locale`:
+#
+#     I18n.locale = :es
+#
+# This would use the information in config/locales/es.yml.
+#
+# The following keys must be escaped otherwise they will not be retrieved by
+# the default I18n backend:
+#
+# true, false, on, off, yes, no
+#
+# Instead, surround them with single quotes.
+#
+# en:
+#   'true': 'foo'
+#
+# To learn more, please read the Rails Internationalization guide
+# available at http://guides.rubyonrails.org/i18n.html.
 
+en:
+  base_title: "Ruby on Rails Tutorial Sample App"
+  label:
+    logo: "Sample App"
+    homepage: "Home page"
+    helppage: "Help page"
+    aboutpage: "About page"
+    contactpage: "Contact page"
+    title: "Ruby on Rails Tutorials"
+    the: "The"
+    by: "by"
+    news: "News"
+    Michael: "Michael Hartl"
+    signupnow: "Sign up now!"
+    welcome: "Welcome to the Sample App"
+    login: "Log in"
+    logout: "Log out"
+    user: "User"
+    account: "Account"
+    profile: "Profile"
+    settings: "Settings"
+    update_profile: "Update your profile"
+    change: "Change"
+    update_profile: "Profile updated"
+    pls_login: "Please log in."
+    stoke: "| "
+    del: "Delete"
+    sure: "You sure?"
+    del_user: "User deleted"
+    activate: "Activate"
+    forgot_pass: "Forgot password"
+    submit: "Submit"
+    rs_pass: "Reset password"
+    update_pass: "Update pass"
+    view_profile: "view my profile"
+    compose: "Compose new micropost..."
+    view_pr: "view my profile"
+  title:
+    signup: "Sign Up"
+    all_users: "All Users"
+  static_pages:
+    about:
+      h1tag: "About Page"
+    help:
+      h1tag: "Help Page"
+    home:
+      h1tag: "HomePage"
+      content: "This's Chapter 3!!!"
+    contact:
+      h1tag: "Contact page"
+      content: "This's content of Contact page"
+  text:
+    home1: "This is the home page for the"
+    home2: "sample application."
+    new1: "This will be a signup page for new users."
+    newuser: "This will be a signup page for new users."
+    msg: "The form contains"
+    newuser1: "New user?"
+    remember: "Remember me on this computer"
+    click_mail: "Welcome to the Sample App! Click on the link below to activate your account:"
+    find_mail: ", find me in app/views/user_mailer/account_activation.html.erb"
+    pls_check_mail: "Please check your email to activate your account."
+    find_pass_rs: ", find me in app/views/user_mailer/password_reset.html.erb"
+    email_send_pass: "Email sent with password reset instructions"
+    email_addr_not_found: "Email address not found"
+    click_to_rs: "To reset your password click the link below:"
+    pass_has_rs: "Password has been reset."
+    no_empty: "can't be empty"
+    pass_rs_expired: "Password reset has expired."
+    micropost_t1: "Posted "
+    micropost_t1: " ago."
+    size_pic: "should be less than 5MB"
+    alt_rails: "Rails"
+  form:
+    name: "Name"
+    email: "Email"
+    pass: "Password"
+    confirm: "Confirmation"
+    create: "Create my account"
+    remember: "Remember me"
+    edit: "Edit user"
+    save_change: "Save changes"
+    post: "Post"
+    follow: "Follow"
+    unfollow: "Unfollow"
+  errors:
+    nil_user: "User not found"
+    msg1: "Invalid email/password combination"
+    msg2: "can't be empty"
+  mail:
+    subject: "Account activation"
+    greeting: "Hi "
+    title_pass_rs: "User#password_reset"
+    pass_rs: "Password reset"
+    text1: "To reset your password click the link below:"
+    text2: "This link will expire in two hours."
+    text3: "If you did not request your password to be reset, please ignore this email and
+            your password will stay as it is."
+  special_characters:
+    stoke: "| "
+    comma: ", "
+  activated:
+    success: "Account activated!"
+    fail: "Invalid activation link"
+  account:
+    not_active: "Account not activated. Check your email for the activation link."
+  micropost:
+    title: "Microposts "
+    create: "Micropost created!"
+    label: "micropost"
+    feed: "Micropost Feed"
+    del: "Micropost deleted"
+    nil: "Micropost nil"
+    msg_size_pic: "Maximum file size is 5MB. Please choose a smaller file."
+  link:
+    rails: "http://rubyonrails.org/"
+  follow:
+    followers: "followers"
+    following: "following"
